base/media/metube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metube
  namespace: media
  labels:
    app.kubernetes.io/name: metube
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: metube
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
