base/media/metube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metube
  namespace: media
  labels:
    app.kubernetes.io/name: metube
    app.kubernetes.io/part-of: homelab
  annotations:
    cert-manager.io/cluster-issuer: stepca-acme
spec:
  ingressClassName: traefik
  rules:
    - host: metube.sunnyside.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metube
                port:
                  number: 80
  tls:
    - hosts:
        - metube.sunnyside.home
      secretName: -tls
